Added Header Part

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <header>
-
+        <section class="banner">
+            <div class="container">
+                <img src="assets/Group.png" alt="coming-soon">
+                <h1 class="banner-title">"In the near future, I hope to become a Developer."</h1>
+                <p class="banner-description">Hi , I'm highly professional , working hard in silence & I'll be excited to except challanges. I love to play & explore. </p>
+                <button class="contact-btn">Contact with me</button>
+            </div>
+        </section>
     </header>
     <main>
-
+        
     </main>
     <footer>
 
