Added development section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,52 @@
             </div>
         </section>
     </header>
-    <main>
-        
+    <main class="main-section create-margin">
+        <!-- Why web development section start here -->
+        <section class="development">
+            <section class="development-container">
+                <div class="why-development">
+                    <h2 class="develop-title">Why Web Development?</h2>
+                    <p class="develop-subtitle">I have an interest on programming. So I want to be a Programer by learning programming languages.</p>
+                </div>
+                <div class="work-hard">
+                    <div class="work">
+                        <h3 class="work-title">I will Do Coding and Change The World</h3>
+                        <p class="work-subtitle">I will finish my work on time.No one can stop me. I am very determined now.</p>
+                        <button class="work-btn">Learn More</button>
+                    </div>
+                    <div class="work-img">
+                        <img width="259px" height="217px" src="assets/Layer_1.png" alt="coming-soon">
+                    </div>
+                </div>
+                <div class="work-hard">                   
+                    <div class="work-img">
+                        <img width="259px" height="217px" src="assets/Group 3.png" alt="coming-soon">
+                    </div>
+                    <div class="work">
+                        <h3 class="work-title">I will Do Coding and Change The World</h3>
+                        <p class="work-subtitle">I will finish my work on time.No one can stop me. I am very determined now.</p>
+                        <button class="work-btn">Learn More</button>
+                    </div>
+                </div>
+                <div class="work-hard">
+                    <div class="work">
+                        <h3 class="work-title">I will Do Coding and Change The World</h3>
+                        <p class="work-subtitle">I will finish my work on time.No one can stop me. I am very determined now.</p>
+                        <button class="work-btn">Learn More</button>
+                    </div>
+                    <div class="work-img">
+                        <img width="259px" height="217px" src="assets/Group 4.png" alt="coming-soon">
+                    </div>
+                </div>
+            </section>
+        </section>
+        <!-- Why web development section end here -->
+        <!-- Inspiration section starts here -->
+        <sec class="inspiration">
+            
+        </sec>
+        <!-- Inspiration section starts here -->
     </main>
     <footer>
 
