--- a/index.html
+++ b/index.html
@@ -59,9 +59,15 @@
         </section>
         <!-- Why web development section end here -->
         <!-- Inspiration section starts here -->
-        <sec class="inspiration">
-            
-        </sec>
+        <section class="Inspiration">
+            <div class="Inspiration-heading">
+                <h2 class="inspiration-title">My Inspiration</h2>
+                <p class="inspiration-subtitle">Since the time I was feeling so alone and I have no idea what will I do .Then I saw my friend he told  me to learn programming & I also wanted to learn before he said . But his word then push me & I jump over it & that is Programming Hero Web Development course.I belive I will do hardwork & Allah Tala will help me ingshallah.</p>
+            </div>
+            <div class="inspiration-img">
+                <iframe width="900" height="550" src="https://www.youtube.com/embed/JUwePydwbUI?si=BjcqGMa0Hs4DdWGj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
         <!-- Inspiration section starts here -->
     </main>
     <footer>
