Added The Target Section

--- a/index.html
+++ b/index.html
@@ -58,17 +58,47 @@
             </section>
         </section>
         <!-- Why web development section end here -->
+
         <!-- Inspiration section starts here -->
         <section class="Inspiration">
             <div class="Inspiration-heading">
                 <h2 class="inspiration-title">My Inspiration</h2>
-                <p class="inspiration-subtitle">Since the time I was feeling so alone and I have no idea what will I do .Then I saw my friend he told  me to learn programming & I also wanted to learn before he said . But his word then push me & I jump over it & that is Programming Hero Web Development course.I belive I will do hardwork & Allah Tala will help me ingshallah.</p>
+                <p class="inspiration-subtitle">Since the time I was feeling so alone and I have no idea what will I do .Then I saw my friend he told  me to learn programming & I also wanted to learn before he said . But his word  push me & then I jump over it & that is Programming Hero Web Development course.I belive I will do hardwork & Allah Tala will help me ingshallah.</p>
             </div>
             <div class="inspiration-img">
                 <iframe width="900" height="550" src="https://www.youtube.com/embed/JUwePydwbUI?si=BjcqGMa0Hs4DdWGj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
-        <!-- Inspiration section starts here -->
+        <!-- Inspiration section end here -->
+
+        <!-- Target section starts here -->
+         <section class="target">
+            <div class="Inspiration-heading">
+                <h2 class="inspiration-title">My Current Target</h2>
+                <p class="inspiration-subtitle">Since the time I was feeling so alone and I have no idea what will I do .Then I saw my friend he told  me to learn programming & I also wanted to learn before he said . But his word  push me & then I jump over it & that is Programming Hero Web Development course.I belive I will do hardwork & Allah Tala will help me ingshallah.</p>
+            </div>
+            <div class="card-container">
+                <div class="card-box">
+                    <img src="assets/html.png" alt="coming-soon">
+                    <h3 class="languages">HTML</h3>
+                    <p class="card-description">Programming languages are difficult but easy to learn & control.HTML stand for Hyper Text Markup Language.</p>
+                    <h5 class="learn-more">Learn More</h5>
+                </div>
+                <div class="card-box">
+                    <img src="assets/css.png" alt="coming-soon">
+                    <h3 class="languages">CSS</h3>
+                    <p class="card-description">Programming languages are difficult but easy to learn & control.CSS stand for “Cascading Style Sheets”.</p>
+                    <h5 class="learn-more">Learn More</h5>
+                </div>
+                <div class="card-box">
+                    <img src="assets/js.png" alt="coming-soon">
+                    <h3 class="languages">JavaScript</h3>
+                    <p class="card-description">JavaScript stand for create dynamically updating content, control multimedia, animate images.</p>
+                    <h5 class="learn-more">Learn More</h5>
+                </div>
+            </div>
+         </section>
+        <!-- Target section end here -->
     </main>
     <footer>
 
