Added Hand-Shake Section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
             </div>
          </section>
         <!-- Target section end here -->
+
+        <!-- Hand-shake section starts here -->
+         <section class="hand-shake">
+            <div class="support">
+                <div class="support-content">
+                    <h3 class="support-title">I need Support</h3>
+                    <p class="support-subtitle">I will support you when you need me.Just tell me your problem.</p>
+                </div>
+                <input class="sujjest-me" type="text" placeholder="Suggest me any feedback for me" name="" id="" >
+                <button class="btn-submit" type="submit">Submit</button>
+            </div>
+         </section>
+         <!-- Hand-shake section end here -->
     </main>
     <footer>
 
