--- a/index.html
+++ b/index.html
@@ -113,8 +113,15 @@
          </section>
          <!-- Hand-shake section end here -->
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-section">
+            <h4 class="commitment">An Open Commitment by Md Burhanul Islam</h4>
+            <div class="icon">
+                <div><img src="assets/facebook.png" alt="coming-soon"></div>
+                <div><img src="assets/github.png" alt="coming-soon"></div>
+                <div><img src="assets/linkedin-icon 1.png" alt="coming-soon"></div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
