Added challenges part & some styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
                 <img src="assets/Group.png" alt="coming-soon">
                 <h1 class="banner-title">"In the near future, I hope to become a Developer."</h1>
                 <p class="banner-description">Hi , I'm highly professional , working hard in silence & I'll be excited to except challanges. I love to play & explore. </p>
-                <button class="contact-btn">Contact with me</button>
+                
+                <a href="http://127.0.0.1:5500/handshake.html">
+                    <button class="contact-btn">Contact with me</button>
+                </a>
             </div>
         </section>
     </header>
@@ -78,22 +81,22 @@
                 <p class="inspiration-subtitle">Since the time I was feeling so alone and I have no idea what will I do .Then I saw my friend he told  me to learn programming & I also wanted to learn before he said . But his word  push me & then I jump over it & that is Programming Hero Web Development course.I belive I will do hardwork & Allah Tala will help me ingshallah.</p>
             </div>
             <div class="card-container">
-                <div class="card-box">
+                <div class="card-box1">
                     <img src="assets/html.png" alt="coming-soon">
                     <h3 class="languages">HTML</h3>
                     <p class="card-description">Programming languages are difficult but easy to learn & control.HTML stand for Hyper Text Markup Language.</p>
                     <h5 class="learn-more">Learn More</h5>
                 </div>
-                <div class="card-box">
+                <div class="card-box2">
                     <img src="assets/css.png" alt="coming-soon">
                     <h3 class="languages">CSS</h3>
                     <p class="card-description">Programming languages are difficult but easy to learn & control.CSS stand for “Cascading Style Sheets”.</p>
                     <h5 class="learn-more">Learn More</h5>
                 </div>
-                <div class="card-box">
+                <div class="card-box3">
                     <img src="assets/js.png" alt="coming-soon">
                     <h3 class="languages">JavaScript</h3>
-                    <p class="card-description">JavaScript stand for create dynamically updating content, control multimedia, animate images.</p>
+                    <p class="card-description">JavaScript stand for create dynamically updating content, control multimedia, animate images & many more.</p>
                     <h5 class="learn-more">Learn More</h5>
                 </div>
             </div>
@@ -113,15 +116,29 @@
          </section>
          <!-- Hand-shake section end here -->
     </main>
-    <footer class="footer">
-        <div class="footer-section">
-            <h4 class="commitment">An Open Commitment by Md Burhanul Islam</h4>
-            <div class="icon">
-                <div><img src="assets/facebook.png" alt="coming-soon"></div>
-                <div><img src="assets/github.png" alt="coming-soon"></div>
-                <div><img src="assets/linkedin-icon 1.png" alt="coming-soon"></div>
+    <footer >
+        <section class="footer">
+            <div class="footer-section">
+                <h4 class="commitment">An Open Commitment by Md Burhanul Islam</h4>
+                <div class="icon">
+                    <div>
+                        <a href="https://www.facebook.com/groups/webdevelopmentbatch9">
+                            <img src="assets/facebook.png" alt="coming-soon">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://github.com/">
+                            <img src="assets/github.png" alt="coming-soon">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://bd.linkedin.com/">
+                            <img src="assets/linkedin-icon 1.png" alt="coming-soon">
+                        </a>
+                    </div>
+                </div>
             </div>
-        </div>
+        </section>
     </footer>
 </body>
 </html>
