--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                 <h1 class="banner-title">"In the near future, I hope to become a Developer."</h1>
                 <p class="banner-description">Hi , I'm highly professional , working hard in silence & I'll be excited to except challanges. I love to play & explore. </p>
                 
-                <a href="http://127.0.0.1:5500/handshake.html">
+                <a href="#footer">
                     <button class="contact-btn">Contact with me</button>
                 </a>
             </div>
         </section>
     </header>
-    <main class="main-section create-margin">
+    <main id="main-section">
         <!-- Why web development section start here -->
         <section class="development">
             <section class="development-container">
@@ -117,9 +117,11 @@
          <!-- Hand-shake section end here -->
     </main>
     <footer >
-        <section class="footer">
+        <section id="footer">
             <div class="footer-section">
-                <h4 class="commitment">An Open Commitment by Md Burhanul Islam</h4>
+                <div class="footer-title">
+                    <h4 class="commitment">An Open Commitment by Md Burhanul Islam</h4>
+                </div>
                 <div class="icon">
                     <div>
                         <a href="https://www.facebook.com/groups/webdevelopmentbatch9">
